Update README with comprehensive, well-structured documentation